<resources>
    <string name="app_name">DemoLayout</string>
    <string name="default_number">0</string>
    <string name="clear_all">C</string>
    <string name="decrease_value">Giảm</string>
    <string name="increase_value">Tăng</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="minus_sign">-</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="plus_sign">+</string>
    <string name="number_0">0</string>
    <string name="number_2">2</string>
    <string name="number_1">1</string>
    <string name="number_3">3</string>
    <string name="minus_plus_sign">±</string>
    <string name="number_000">000</string>
    <string name="comma_sign">,</string>
    <string name="done">XONG</string>
    <string name="dialog_sell_price_text">Giá bán</string>
    <string name="title_fragment_food_menu">Thực đơn</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">user.name@email.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_fragment_selling">Bán hàng</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_fragment_report">Báo Cáo</string>
    <string name="save">Cất</string>
    <string name="add_food">Thêm món</string>
    <string name="chosing_food">Chọn món</string>
    <string name="unit_count">Đơn vị tính</string>
    <string name="unit_count_unit">Cái</string>
    <string name="unit_count_bottle">Chai</string>
    <string name="unit_count_cup">Cốc</string>
    <string name="unit_count_pack">Gói</string>
    <string name="food_name">Tên món*</string>
    <string name="food_name_hint">Nhập tên món</string>
    <string name="food_price_text">Giá bán:</string>
    <string name="state">Trạng thái</string>
    <string name="symbol">Biểu tượng</string>
    <string name="color">Màu sắc</string>
    <string name="stop_selling">Ngừng bán</string>
    <string name="delete">XÓA</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="out_of_stock">Ngừng bán</string>
    <string name="cukcuk_lite">CUKCUK LITE</string>
    <string name="no">KHÔNG</string>
    <string name="yes">CÓ</string>
    <string name="pay">Thu tiền</string>
    <string name="pay_sum">Tổng tiền</string>
    <string name="payment">Thu tiền</string>
    <string name="Done">Xong</string>
    <string name="BILL">HÓA ĐƠN</string>
    <string name="number">Số: </string>
    <string name="date">Ngày:</string>
    <string name="table">Bàn:</string>
    <string name="decline">Hủy</string>
</resources>
