<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="7">

    <LinearLayout
        android:id="@+id/toolbar_menu"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_quantity_dialog_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="start|center"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="NestedWeights" />


        <ImageButton
            android:id="@+id/button_quantity_dialog_close"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@drawable/button_action_bar"
            android:src="@drawable/ic_close_white"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="NestedWeights">

            <EditText
                android:id="@+id/edit_text_dialog"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="@drawable/edittext_border"
                android:inputType="number"
                android:padding="8dp"
                android:textAlignment="viewEnd"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="LabelFor,NestedWeights,RtlCompat" />

            <ImageButton
                android:id="@+id/dialog_delete_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:src="@drawable/ic_back_keyboard"
                tools:ignore="NestedWeights" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="NestedWeights">


            <Button
                android:id="@+id/dialog_decrease_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:text="@string/decrease_value"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/dialog_increase_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:text="@string/increase_value"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/dialog_clear_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:text="@string/clear_all"
                android:textSize="20sp"
                tools:ignore="ButtonStyle,NestedWeights" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dialog_7_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:text="@string/number_7"
                android:textSize="20sp"
                tools:ignore="ButtonStyle,NestedWeights" />

            <Button
                android:id="@+id/dialog_8_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:text="@string/number_8"
                android:textSize="20sp"
                tools:ignore="ButtonStyle,NestedWeights" />

            <Button
                android:id="@+id/dialog_9_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:text="@string/number_9"
                android:textSize="20sp"
                tools:ignore="ButtonStyle,NestedWeights" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dialog_4_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:text="@string/number_4"
                android:textSize="20sp"
                tools:ignore="ButtonStyle,NestedWeights" />

            <Button
                android:id="@+id/dialog_5_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:text="@string/number_5"
                android:textSize="20sp"
                tools:ignore="ButtonStyle,NestedWeights" />

            <Button
                android:id="@+id/dialog_6_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:text="@string/number_6"
                android:textSize="20sp"
                tools:ignore="ButtonStyle,NestedWeights" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">


            <Button
                android:id="@+id/dialog_1_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:text="@string/number_1"
                android:textSize="20sp"
                tools:ignore="ButtonStyle,NestedWeights" />

            <Button
                android:id="@+id/dialog_2_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:text="@string/number_2"
                android:textSize="20sp"
                tools:ignore="ButtonStyle,NestedWeights" />

            <Button
                android:id="@+id/dialog_3_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:text="@string/number_3"
                android:textSize="20sp"
                tools:ignore="ButtonStyle,NestedWeights" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dialog_0_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:text="@string/number_0"
                android:textSize="20sp"
                tools:ignore="ButtonStyle,NestedWeights" />

            <Button
                android:id="@+id/dialog_done_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_weight="2"
                android:background="@drawable/button_done_selector"
                android:text="@string/done"
                android:textColor="@color/white"
                android:textSize="15sp"
                tools:ignore="ButtonStyle,NestedWeights" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>