<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/food_item_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/item_food_selector"
    android:padding="7dp">

    <ImageView
        android:id="@+id/image_food_menu"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/image_food_menu_bg"
        android:src="@drawable/ic_default" />

    <TextView
        android:id="@+id/text_food_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/image_food_menu"
        android:layout_toLeftOf="@id/image_food_info"
        android:layout_toRightOf="@+id/image_food_menu"
        android:layout_toStartOf="@id/image_food_info"
        android:maxLines="2"
        android:text="@string/app_name"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/text_sell_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_food_name"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/image_food_menu"
        android:layout_toRightOf="@id/image_food_menu"
        android:text="@string/food_price_text" />

    <TextView
        android:id="@+id/text_food_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_food_name"
        android:layout_marginLeft="2dp"
        android:layout_marginStart="2dp"
        android:layout_toEndOf="@id/text_sell_price"
        android:layout_toRightOf="@id/text_sell_price"
        android:text="@string/food_price_text" />

    <TextView
        android:id="@+id/text_food_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_food_name"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/text_food_price"
        android:layout_toRightOf="@id/text_food_price"
        android:background="@drawable/text_food_state_bg"
        android:gravity="center_vertical"
        android:text="@string/out_of_stock"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/image_food_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_chevron_right" />
</RelativeLayout>